# Module_3_Shiqiu

./: .gitignore  .pre-commit-config.yaml  SYLLABUS.md  pyproject.toml
day1/: geneturing_results.csv  starter_geneturing.ipynb  starter_geneturing.py  test_geneturing.py
day2/: genehop.ipynb  genehop_refactor.ipynb  genehop_refactor.py
day3/: implement_e_utilities.ipynb  implement_e_utilities_genehop.ipynb  implement_e_utilities_genehop.py  implement_e_utilities_geneturing.ipynb
day4/: genehop_refactor.ipynb
outputs/: bioasq_results.csv  genehop_OpenAIresults.csv  genehop_entrez.json  genehop_entrez_cosine_similarity.csv  genehop_ollama_results.csv  genehop_results.csv  geneturing_OpenAI_rawresults.csv  geneturing_OpenAI_results.csv  geneturing_entrez_best.json  geneturing_results.csv
