[project]
name = "module_3_Shiqiu"
description = "Benchmarking and evaluating LLMs with principled software engineering techniques. Re-implementation of the GeneGPT paper."
authors = ["Shiqiu <shiqiu.yu2l@utsouthwestern.edu>"]
requires-python = ">=3.12"


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"                   # makes isort + Black play nicely
line_length = 88

[tool.flake8]
max-line-length = 88                # stay consistent
extend-ignore = ["E203", "W503"]    # also matches Black's opinions
per-file-ignores = [
  "__init__.py:F401",               # silence 'unused import' in package inits
]

[tool.mypy]
python_version = "3.12"
strict = true                       # OR choose some flags
plugins = [
  "pydantic.mypy",                  # example: extra plugin support
]
ignore_missing_imports = true       # keep CI green while you iterate
